# HINT

./: .gitignore  LICENSE  README.md  all_schemas.txt  data_inspect.py  design.md  pyproject.toml  requirements.md  tasks.md  test.py  testing.py  view_parquet.py
Analyzer/: h5_analyzer.py  parquet_analyzer.py
Analyzer/Report/: README.md
configs/: cnn_config.yaml  config.yaml  etl_config.yaml  hydra.yaml  icd_config.yaml  intervention_config.yaml  test_config.yaml
notebooks/: h5_inspection.ipynb
outputs/2025-12-05/02-17-55/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-05/10-39-34/.hydra/: hydra.yaml
outputs/2025-12-05/11-10-57/.hydra/: hydra.yaml
outputs/2025-12-05/11-16-30/.hydra/: hydra.yaml
outputs/2025-12-05/11-43-08/.hydra/: hydra.yaml
outputs/2025-12-05/12-01-00/.hydra/: hydra.yaml
outputs/2025-12-05/12-17-03/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-05/12-31-13/.hydra/: hydra.yaml
resources/: exact_level2_104.txt
src/hint/app/: factory.py  main.py
src/hint/domain/: __init__.py  entities.py  vo.py
src/hint/foundation/: configs.py  dtos.py  exceptions.py  interfaces.py
src/hint/infrastructure/: calibration.py  components.py  datasource.py  icd_components.py  icd_datasource.py  icd_networks.py  networks.py  registry.py  telemetry.py
src/hint/services/: icd_service.py  trainer.py
src/test/: conftest.py  runner.py
src/test/e2e/: test_cli_entrypoint.py
src/test/integration/: conftest.py
src/test/unit/: conftest.py
src/test/utils/: custom_assertions.py  logging.py  seeding.py  synthetic_data.py
(+73 files in other folders)
